--- a/notebooks/Chapter2.ipynb
+++ b/notebooks/Chapter2.ipynb
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -169,20 +169,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "392.6990816987241\n"
+      "523.5987755982989\n"
      ]
     }
    ],
    "source": [
     "pi = 3.1415926535897931\n",
     "radius = 5\n",
-    "volume = pi*radius**3\n",
+    "volume = (4/3)*pi*radius**3\n",
     "print(volume)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -191,7 +191,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1544.25\n"
+      "945.4499999999999\n"
      ]
     }
    ],
@@ -202,7 +202,7 @@
     "price_with_discount = .6*price_of_book\n",
     "# shipping costs $3 for first book and $.75 for each additional book\n",
     "total_cost_of_shipping = 3 + .75*59\n",
-    "total_cost = 60*price_of_book + total_cost_of_shipping\n",
+    "total_cost = 60*price_with_discount + total_cost_of_shipping\n",
     "print(total_cost)"
    ]
   },
