--- a/notebooks/Chapter3_Exercises.ipynb
+++ b/notebooks/Chapter3_Exercises.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -146,12 +146,12 @@
     "    print('|', end=\"\")\n",
     "    print((\"         |\")*number_of_squares_per_side)\n",
     "    \n",
-    "print_pipe_row(2)"
+    "print_row_of_vertical_chars(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -183,12 +183,12 @@
     "    #now print row of +,- characters\n",
     "    print_plus_minus_row(number_of_squares_per_side)\n",
     "    \n",
-    "print_row_of_boxes(2)"
+    "print_row_of_squares(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -280,6 +280,15 @@
     "print(\"4x4 grid\")\n",
     "print_grid(4)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
