--- a/notebooks/Week_5_Challenge.ipynb
+++ b/notebooks/Week_5_Challenge.ipynb
@@ -121,6 +121,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Here is some string manipulation that might be helpful:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "r\n",
+      "rad\n"
+     ]
+    }
+   ],
+   "source": [
+    "word = \"radar\"\n",
+    "print(word[0])\n",
+    "print(word[0:3])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
